--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.5",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "clx": "^1.0.0",
@@ -22,12 +24,13 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
-    "sass": "^1.79.4"
+    "sass": "^1.79.4",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
